--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "root",
-  "private": true,
-  "devDependencies": {
-    "lerna": "^3.13.1"
-  },
-  "dependencies": {
-    "ts-node": "^8.5.4",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.2"
-  }
+	"name": "root",
+	"private": true,
+	"scripts": {
+		"start": "ts-node -r tsconfig-paths/register packages/main.ts"
+	},
+	"devDependencies": {
+		"lerna": "^3.13.1"
+	},
+	"dependencies": {
+		"@nestjs/common": "^6.10.2",
+		"@nestjs/core": "^6.10.2",
+		"@nestjs/platform-express": "^6.10.2",
+		"reflect-metadata": "^0.1.13",
+		"ts-node": "^8.5.4",
+		"tsconfig-paths": "^3.9.0",
+		"typescript": "^3.7.2"
+	}
 }
