--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/meepobrother/nger-center/issues"
   },
   "dependencies": {
-    "@nestjs/graphql": "^6.5.3"
+    "@nestjs/graphql": "^6.5.3",
+    "apollo-server-express": "^2.9.12"
   }
 }
